Fix pub image overlap

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -346,11 +346,6 @@ footer.sticky-bottom {
           color: var(--global-theme-color) !important;
           border: 1px solid var(--global-theme-color);
         }
-        img {
-          height: 100%; 
-          width: 100%; 
-          height: auto;
-        }
       }
       .title {
         font-weight: bolder;
